--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<title>three.js webgl - scenes transition</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<style>
-			body {
-				margin: 0;
-			}
-		</style>
-	</head>
-	<body>
+  <head>
+    <title>three.js webgl - scenes transition</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="container"></div>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.131/build/three.module.js"
+        }
+      }
+    </script>
 
-
-		<div id="container"></div>
-		<script type="importmap">
-			{
-				"imports": {
-					"three": "https://cdn.jsdelivr.net/npm/three@0.131/build/three.module.js"
-				}
-			}
-		</script>
-
-		<script type="module" src="./index.js"></script>
-	</body>
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
